--- a/application/templates/sewa/index.html
+++ b/application/templates/sewa/index.html
@@ -97,7 +97,7 @@
                     </div>
                   </div>
 
-<!--                   <div class="form-group row">
+                  <!-- <div class="form-group row">
                     <label for="file_upload" class="col-sm-5 col-form-label">Upload File</label>
                     <div class="col-sm-7">
                         <input type="file" id="file_upload" name="file_upload" onchange="ValidateSingleInput(this);"  required >
@@ -219,19 +219,21 @@ function alertWarning(pesan){
   }
 
 function simpan(obj){
-  var form_data = new FormData();
-//   file = $('#file_upload').prop('files')[0];
+  // var form_data = new FormData();
+  // file = $('#file_upload').prop('files')[0];
 
-//   form_data.append("file_upload", file);
-  form_data.append("no_id_film", $('#no_id_film').val());
+  // form_data.append("file_upload", file);
+  // form_data.append("no_id_film", $('#no_id_film').val());
 
   $.ajax({
-      cache: false,
-      contentType: false,
-      processData: false,
+      // cache: false,
+      // contentType: false,
+      // processData: false,
       type: 'POST',
       url: "{{ url_for('proses_pengajuan_sewa') }}",
-      data: form_data,
+      data: {
+              'no_id_film' : $('#no_id_film').val()
+          },
       dataType: 'json',
       success: function(data) {
           if (data.status == "T") {
